changed saving of model weights file format

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -11,19 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "78b7f7e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\SKill\\anaconda3\\envs\\tf-gpu\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import MURA\n",
     "import cv2\n",
@@ -54,20 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "afd350f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# All editable variables\n",
-    "model_file_path = \"models/model_2\"\n",
+    "model_file_path = \"models/model_3\"\n",
     "# If preprocessing needs to run\n",
     "run_preprocessing = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f5b73251",
    "metadata": {},
    "outputs": [],
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8dd25378",
    "metadata": {},
    "outputs": [],
@@ -113,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ae204155",
    "metadata": {},
    "outputs": [],
@@ -142,163 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f906dcd1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"encoder_decoder\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv2d (Conv2D)             (None, 32, 32, 64)        1088      \n",
-      "                                                                 \n",
-      " batch_normalization (BatchN  (None, 32, 32, 64)       256       \n",
-      " ormalization)                                                   \n",
-      "                                                                 \n",
-      " activation (Activation)     (None, 32, 32, 64)        0         \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 16, 16, 128)       131200    \n",
-      "                                                                 \n",
-      " batch_normalization_1 (Batc  (None, 16, 16, 128)      512       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_1 (Activation)   (None, 16, 16, 128)       0         \n",
-      "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 8, 8, 256)         524544    \n",
-      "                                                                 \n",
-      " batch_normalization_2 (Batc  (None, 8, 8, 256)        1024      \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_2 (Activation)   (None, 8, 8, 256)         0         \n",
-      "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 4, 4, 256)         1048832   \n",
-      "                                                                 \n",
-      " batch_normalization_3 (Batc  (None, 4, 4, 256)        1024      \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_3 (Activation)   (None, 4, 4, 256)         0         \n",
-      "                                                                 \n",
-      " reshape (Reshape)           (None, 4096)              0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 2048)              8390656   \n",
-      "                                                                 \n",
-      " batch_normalization_4 (Batc  (None, 2048)             8192      \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_4 (Activation)   (None, 2048)              0         \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 128)               262272    \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 2048)              133120    \n",
-      "                                                                 \n",
-      " batch_normalization_5 (Batc  (None, 2048)             8192      \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_5 (Activation)   (None, 2048)              0         \n",
-      "                                                                 \n",
-      " dense_3 (Dense)             (None, 4096)              8392704   \n",
-      "                                                                 \n",
-      " reshape_1 (Reshape)         (None, 4, 4, 256)         0         \n",
-      "                                                                 \n",
-      " conv2d_transpose (Conv2DTra  (None, 8, 8, 256)        262400    \n",
-      " nspose)                                                         \n",
-      "                                                                 \n",
-      " batch_normalization_6 (Batc  (None, 8, 8, 256)        1024      \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_6 (Activation)   (None, 8, 8, 256)         0         \n",
-      "                                                                 \n",
-      " conv2d_transpose_1 (Conv2DT  (None, 16, 16, 128)      524416    \n",
-      " ranspose)                                                       \n",
-      "                                                                 \n",
-      " batch_normalization_7 (Batc  (None, 16, 16, 128)      512       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_7 (Activation)   (None, 16, 16, 128)       0         \n",
-      "                                                                 \n",
-      " conv2d_transpose_2 (Conv2DT  (None, 32, 32, 64)       131136    \n",
-      " ranspose)                                                       \n",
-      "                                                                 \n",
-      " batch_normalization_8 (Batc  (None, 32, 32, 64)       256       \n",
-      " hNormalization)                                                 \n",
-      "                                                                 \n",
-      " activation_8 (Activation)   (None, 32, 32, 64)        0         \n",
-      "                                                                 \n",
-      " conv2d_transpose_3 (Conv2DT  (None, 64, 64, 1)        1025      \n",
-      " ranspose)                                                       \n",
-      "                                                                 \n",
-      " encoder (Sequential)        (None, 4096)              1708480   \n",
-      "                                                                 \n",
-      " latent_encoder (Sequential)  (None, 128)              8661120   \n",
-      "                                                                 \n",
-      " z_mean (Dense)              multiple                  8256      \n",
-      "                                                                 \n",
-      " z_log_var (Dense)           multiple                  8256      \n",
-      "                                                                 \n",
-      " latent_decoder (Sequential)  (None, 4, 4, 256)        8534016   \n",
-      "                                                                 \n",
-      " decoder (Sequential)        (None, 64, 64, 1)         920769    \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 19,840,897\n",
-      "Trainable params: 19,830,401\n",
-      "Non-trainable params: 10,496\n",
-      "_________________________________________________________________\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\SKill\\anaconda3\\envs\\tf-gpu\\lib\\site-packages\\keras\\initializers\\initializers_v2.py:120: UserWarning: The initializer GlorotUniform is unseeded and being called multiple times, which will return identical values  each time (even if the initializer is unseeded). Please update your code to provide a seed to the initializer, or avoid using the same initalizer instance more than once.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"vae\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " encoder_decoder (encoder_de  multiple                 19840897  \n",
-      " coder)                                                          \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 19,840,903\n",
-      "Trainable params: 19,830,401\n",
-      "Non-trainable params: 10,502\n",
-      "_________________________________________________________________\n",
-      "Epoch 1/5\n",
-      "Vanilla Loss\n",
-      "Vanilla Loss\n",
-      "133/133 [==============================] - ETA: 0s - mse_loss: 2167.9185 - reconstruction_loss: -890.0754 - kl_loss: 0.0000e+004\n",
-      "callback predict\n",
-      "133/133 [==============================] - 7s 20ms/step - mse_loss: 2167.9185 - reconstruction_loss: -890.0754 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
-      "Epoch 2/5\n",
-      "133/133 [==============================] - ETA: 0s - mse_loss: 1048.6615 - reconstruction_loss: -927.6999 - kl_loss: 0.0000e+004\n",
-      "callback predict\n",
-      "133/133 [==============================] - 2s 15ms/step - mse_loss: 1048.6615 - reconstruction_loss: -927.6999 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
-      "Epoch 3/5\n",
-      "133/133 [==============================] - ETA: 0s - mse_loss: 835.8154 - reconstruction_loss: -927.6107 - kl_loss: 0.0000e+004\n",
-      "callback predict\n",
-      "133/133 [==============================] - 2s 15ms/step - mse_loss: 835.8154 - reconstruction_loss: -927.6107 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
-      "Epoch 4/5\n",
-      "133/133 [==============================] - ETA: 0s - mse_loss: 735.7487 - reconstruction_loss: -927.9302 - kl_loss: 0.0000e+004\n",
-      "callback predict\n",
-      "133/133 [==============================] - 2s 14ms/step - mse_loss: 735.7487 - reconstruction_loss: -927.9302 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
-      "Epoch 5/5\n",
-      "133/133 [==============================] - ETA: 0s - mse_loss: 644.8524 - reconstruction_loss: -927.5512 - kl_loss: 0.0000e+004\n",
-      "callback predict\n",
-      "133/133 [==============================] - 2s 15ms/step - mse_loss: 644.8524 - reconstruction_loss: -927.5512 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
@@ -342,69 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7071dba6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "not callback predict\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history_valid = model.predict(image_datasets['test'], batch_size=batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "78a2533e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(history_valid)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "353efa2a",
-   "metadata": {},
-   "source": [
-    "# Plots Creation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b363b159",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_loss = history_train.history['binary_crossentropy: ']\n",
-    "# # valid_loss = history_valid.history['binary_crossentropy: ']\n",
-    "\n",
-    "# plt.plot(train_loss , label='train')\n",
-    "# # plt.plot(valid_loss , label='test')\n",
-    "# plt.title('Train vs Validation Loss')\n",
-    "# plt.ylabel('Reconstruction Loss')\n",
-    "# plt.xlabel('Epochs')\n",
-    "# plt.legend()\n",
-    "# plt.show()"
+    "len(history_valid)"
    ]
   },
   {
@@ -434,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "154822a8",
    "metadata": {},
    "outputs": [],
@@ -477,20 +268,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324861d8",
+   "id": "7cccebea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights(model_file_path + '/model_weights.h5')"
+    "print(model_file_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11c769f",
+   "id": "324861d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save_weights(model_file_path + '/model_weights', save_format='tf')"
+   ]
   },
   {
    "cell_type": "code",
