added load_model in notebook

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -62,7 +62,8 @@
     "# All editable variables\n",
     "model_file_path = \"models/model_4\"\n",
     "# If preprocessing needs to run\n",
-    "run_preprocessing = False"
+    "run_preprocessing = False\n",
+    "load_model = False"
    ]
   },
   {
@@ -314,14 +315,16 @@
     "    # save_directory = 'Images/images_epochs' #edited in models where automatically make folder if non existent\n",
     "    save_directory = model_file_path + '/callback_images'\n",
     "    save_callback = SaveImageCallback(image_datasets['train'], save_directory=save_directory)\n",
-    "\n",
-    "    # plot_model(model, 'autoencoder_compress.png', show_shapes=True)\n",
-    "    #training on training set.\n",
-    "    history_train = model.fit(image_datasets['train'], \n",
-    "                epochs=epochs, \n",
-    "                batch_size=batch_size,\n",
-    "                validation_split=0.15,\n",
-    "                callbacks=[save_callback])\n",
+    "    \n",
+    "    if load_model:\n",
+    "        model.load_weights(model_file_path + '/model_weights')\n",
+    "    else:\n",
+    "        history_train = model.fit(image_datasets['train'], \n",
+    "            epochs=epochs, \n",
+    "            batch_size=batch_size,\n",
+    "            validation_split=0.15,\n",
+    "            callbacks=[save_callback])\n",
+    "   \n",
     "    "
    ]
   },
