added making of GIF

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -3,48 +3,6 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "2bc86acd",
-   "metadata": {},
-   "source": [
-    "# Dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "78b7f7e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\SKill\\anaconda3\\envs\\tf-gpu\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import MURA\n",
-    "import cv2\n",
-    "import image_manipulation\n",
-    "from multiprocessing import Pool\n",
-    "from models import *\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import matplotlib.pyplot as plt\n",
-    "import preprocessing\n",
-    "import json\n",
-    "from os import path, mkdir\n",
-    "\n",
-    "import keras\n",
-    "from argparse import ArgumentParser\n",
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "22e578b7",
    "metadata": {},
    "source": [
@@ -63,7 +21,43 @@
     "model_file_path = \"models/model_3\"\n",
     "# If preprocessing needs to run\n",
     "run_preprocessing = False\n",
-    "load_model = True"
+    "load_model = True\n",
+    "save_weights = False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2bc86acd",
+   "metadata": {},
+   "source": [
+    "# Dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "78b7f7e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import MURA\n",
+    "import cv2\n",
+    "import image_manipulation\n",
+    "from multiprocessing import Pool\n",
+    "from models import *\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import preprocessing\n",
+    "import json\n",
+    "from os import path, mkdir\n",
+    "from PIL import Image\n",
+    "import re\n",
+    "\n",
+    "import keras\n",
+    "from argparse import ArgumentParser\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -536,14 +530,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf3440dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3f5369b0",
@@ -600,6 +586,94 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "d41fb188",
+   "metadata": {},
+   "source": [
+    "# GIF for Callback_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "70d17c63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_epoch(filename):\n",
+    "    match = re.search(r'epoch_(\\d+)_', filename)\n",
+    "    if match:\n",
+    "        return int(match.group(1))\n",
+    "    return 0\n",
+    "\n",
+    "def create_gif(folder_path, output_path, duration=50):\n",
+    "    images = []\n",
+    "    \n",
+    "    # Get all image file names from the folder\n",
+    "    filenames = os.listdir(folder_path)\n",
+    "    filenames = sorted(filenames, key=lambda x: extract_epoch(x))\n",
+    "\n",
+    "    for filename in filenames:\n",
+    "        if filename.endswith('.png') or filename.endswith('.jpg'):\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            image = Image.open(file_path)\n",
+    "            images.append(image)\n",
+    "    \n",
+    "    # Save the images as a GIF\n",
+    "    images[0].save(output_path, save_all=True, append_images=images[1:], optimize=False, duration=duration, loop=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "dafb861c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating GIF for: image0\n",
+      "Creating GIF for: image1\n",
+      "Creating GIF for: image2\n",
+      "Creating GIF for: image3\n"
+     ]
+    }
+   ],
+   "source": [
+    "gif_folder_path = model_file_path + \"/\" + \"callback_images\"\n",
+    "image_folders = ['image0', 'image1', 'image2', 'image3']\n",
+    "\n",
+    "for i,folder in enumerate(image_folders):\n",
+    "    curr_folder = gif_folder_path + \"/\" + folder\n",
+    "    gif_output_path = gif_folder_path + \"/\" + f\"image{i}.gif\"\n",
+    "    print(f\"Creating GIF for: image{i}\")\n",
+    "    create_gif(curr_folder, gif_output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "0a807607",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'models/model_3'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_file_path"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "72b430df",
    "metadata": {},
    "source": [
@@ -613,7 +687,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights(model_file_path + '/model_weights', save_format='tf')"
+    "if save_weights:\n",
+    "    model.save_weights(model_file_path + '/model_weights', save_format='tf')"
    ]
   }
  ],
