--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -19,11 +19,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-20 12:11:49.251845: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-05-20 12:11:49.336187: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-05-20 12:11:49.338071: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-20 12:20:32.721536: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-05-20 12:20:32.919233: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-05-20 12:20:32.940268: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-20 12:11:50.356654: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2023-05-20 12:20:35.098756: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "/home/cara/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f5b73251",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8dd25378",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "ae204155",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f906dcd1",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-20 12:11:56.576392: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+      "2023-05-20 12:23:52.706269: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "2023-05-20 12:23:53.107930: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 33554432 exceeds 10% of free system memory.\n",
+      "2023-05-20 12:23:53.149808: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 33554432 exceeds 10% of free system memory.\n",
+      "2023-05-20 12:23:53.164453: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 33554432 exceeds 10% of free system memory.\n",
+      "2023-05-20 12:23:53.278125: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 33554432 exceeds 10% of free system memory.\n",
+      "2023-05-20 12:23:53.313286: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 33554432 exceeds 10% of free system memory.\n"
      ]
     },
     {
@@ -182,17 +187,17 @@
       "Vanilla Loss\n",
       "Data Shape:  (None, 64, 64)\n",
       "Reconstructed Shape:  (None, 64, 64)\n",
-      "38/38 [==============================] - ETA: 0s - mse_loss: 5677.8623 - reconstruction_loss: -412.7689 - kl_loss: 0.0000e+004\n",
+      "38/38 [==============================] - ETA: 0s - mse_loss: 7263.5889 - reconstruction_loss: -53.9568 - kl_loss: 0.0000e+004\n",
       "callback predict\n",
-      "38/38 [==============================] - 40s 1s/step - mse_loss: 5677.8623 - reconstruction_loss: -412.7689 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
+      "38/38 [==============================] - 48s 1s/step - mse_loss: 7263.5889 - reconstruction_loss: -53.9568 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
       "Epoch 2/3\n",
-      "38/38 [==============================] - ETA: 0s - mse_loss: 2093.1174 - reconstruction_loss: -873.7703 - kl_loss: 0.0000e+004\n",
+      "38/38 [==============================] - ETA: 0s - mse_loss: 2769.8525 - reconstruction_loss: -807.8527 - kl_loss: 0.0000e+004\n",
       "callback predict\n",
-      "38/38 [==============================] - 40s 1s/step - mse_loss: 2093.1174 - reconstruction_loss: -873.7703 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
+      "38/38 [==============================] - 53s 1s/step - mse_loss: 2769.8525 - reconstruction_loss: -807.8527 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n",
       "Epoch 3/3\n",
-      "38/38 [==============================] - ETA: 0s - mse_loss: 1925.8534 - reconstruction_loss: -873.4363 - kl_loss: 0.0000e+004\n",
+      "38/38 [==============================] - ETA: 0s - mse_loss: 1943.5594 - reconstruction_loss: -873.5311 - kl_loss: 0.0000e+004\n",
       "callback predict\n",
-      "38/38 [==============================] - 42s 1s/step - mse_loss: 1925.8534 - reconstruction_loss: -873.4363 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n"
+      "38/38 [==============================] - 44s 1s/step - mse_loss: 1943.5594 - reconstruction_loss: -873.5311 - kl_loss: 0.0000e+00 - val_mse_loss: 0.0000e+00 - val_reconstruction_loss: 0.0000e+00\n"
      ]
     }
    ],
