Validation set used for saving of callback images

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -51,41 +51,9 @@
    "outputs": [],
    "source": [
     "# All editable variables\n",
-    "model_file_path = \"models/model_1\"\n",
+    "model_file_path = \"models/model_1_UPAE\"\n",
     "# If preprocessing needs to run\n",
     "load_model = False"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "2bc86acd",
-   "metadata": {},
-   "source": [
-    "# Dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78b7f7e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "from multiprocessing import Pool\n",
-    "from models import *\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import matplotlib.pyplot as plt\n",
-    "import json\n",
-    "from os import path, mkdir\n",
-    "from PIL import Image\n",
-    "import re\n",
-    "\n",
-    "import keras\n",
-    "from argparse import ArgumentParser\n",
-    "import tensorflow as tf"
    ]
   },
   {
@@ -148,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f906dcd1",
+   "id": "ed03caa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,9 +228,9 @@
     "    # Create plot for loss2\n",
     "    create_plot(history, 'loss2', 'Loss 2 per Epoch', 'loss2.png')\n",
     "    # Create plot for binary_crossentropy\n",
-    "    create_plot(history, 'reconstruction_loss', 'Reconstruction Loss per Epoch', 'reconstruction_loss.png')\n",
-    "    # Create plot for accuracy\n",
-    "    create_plot(history, 'accuracy', 'Accuracy per Epoch', 'accuracy.png')\n",
+    "#     create_plot(history, 'reconstruction_loss', 'Reconstruction Loss per Epoch', 'reconstruction_loss.png')\n",
+    "#     # Create plot for accuracy\n",
+    "#     create_plot(history, 'accuracy', 'Accuracy per Epoch', 'accuracy.png')\n",
     "    "
    ]
   },
@@ -310,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reconstructed_images = model.predict(test_images, batch_size=batch_size)"
+    "history_valid = model.predict(image_datasets['test'], batch_size=batch_size)"
    ]
   },
   {
@@ -320,22 +288,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Histogram for Positives and Negatives of the testing set\n",
-    "positive = []\n",
-    "negative = []\n",
-    "for i in range(len(labels)):\n",
-    "    if labels[i] == 1:\n",
-    "        positive.append(reconstructed_images[1][i])\n",
-    "    else:\n",
-    "        negative.append(reconstructed_images[1][i])\n",
-    "plt.hist(positive, color='red', label='positive', bins=50)\n",
-    "plt.hist(negative, color='blue', label='negative', bins=50)\n",
-    "# Get x and y labels\n",
-    "plt.xlabel('Abnormality Score')\n",
-    "plt.ylabel('Number of Images')\n",
-    "plt.title(\"Abnormality Score and Label Histogram\")\n",
-    "plt.legend()\n",
-    "plt.savefig(f'{save_directory}/testing_abnormality_scores.png')"
+    "abnor_scores = history_valid[1]\n",
+    "#converting to an array of numbers instead of tensor\n",
+    "abnor_scores = [item.numpy() for item in abnor_scores if isinstance(item, tf.Tensor)]\n",
+    "abnor_scores = [float(item) for item in abnor_scores]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "982d20ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auc = metrics.roc_auc_score(labels, abnor_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51b41e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Getting roc_curve output\n",
+    "fpr, tpr, thresholds = metrics.roc_curve(labels, abnor_scores)\n",
+    "idx = None\n",
+    "\n",
+    "#Computation for the threshold\n",
+    "for i in range(len(fpr)):\n",
+    "    fnr = 1 - tpr[i]\n",
+    "    if abs(fpr[i] - fnr) <= 5e-3:\n",
+    "        idx = i\n",
+    "        break\n",
+    "assert idx is not None\n",
+    "t = thresholds[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f33476c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using threshold t , will be used to classify abnormality scores as normal or abnormal in the y_pred array;\n",
+    "y_pred = np.zeros_like(labels)\n",
+    "y_pred[abnor_scores < t] = 0\n",
+    "y_pred[abnor_scores >= t] = 1\n",
+    "\n",
+    "\n",
+    "# getting metrics score using y_pred which is now either 0  or 1\n",
+    "pres = metrics.precision_score(labels, y_pred)\n",
+    "sens = metrics.recall_score(labels, y_pred, pos_label=1)\n",
+    "spec = metrics.recall_score(labels, y_pred, pos_label=0)\n",
+    "f1 = metrics.f1_score(labels, y_pred)\n",
+    "print('Error rate:{}'.format(fpr[idx]))\n",
+    "print('Precision:{} \\nSensitivity:{} \\nSpecificity:{} \\nf1:{}\\n'.format(\n",
+    "     pres, sens, spec, f1))"
    ]
   },
   {
@@ -344,7 +354,8 @@
    "id": "aa833ecb",
    "metadata": {},
    "source": [
-    "# Getting of best threshold"
+    "# Getting of best threshold\n",
+    "TODO: UPDATE WITH CURRENT MADE BY CARA, DATA USED ARE LABELS AND ABNORMALITY SCORE"
    ]
   },
   {
@@ -398,8 +409,9 @@
     "\n",
     "    # Get a range of threshold values\n",
     "    lower_threshold, upper_threshold = get_threshold_range(abnormality_scores, num_std=3)\n",
-    "    threshold_range = np.linspace(lower_threshold, upper_threshold, 50)\n",
-    "\n",
+    "    threshold_range = np.linspace(lower_threshold, upper_threshold, 3000)\n",
+    "    print(lower_threshold, upper_threshold)\n",
+    "    print(len(threshold_range))\n",
     "    \n",
     "    # Iterate over a range of threshold values\n",
     "    for threshold in threshold_range:\n",
@@ -409,7 +421,7 @@
     "        metric, precision, recall, true_postivies, true_negatives, false_positives, false_negatives = calculate_f1_score(predicted_labels, labels)\n",
     "\n",
     "        # Update the best threshold if the metric improves\n",
-    "        if metric > best_metric:\n",
+    "        if metric >= best_metric:\n",
     "            print(\"Current best Threshold: \", threshold, \"\\nCurrent best F1 Score: \", metric)\n",
     "            print(\"Current best Precision: \", precision, \"\\nCurrent best Recall: \", recall)\n",
     "            print(\"\\nCurrent best True Positives: \", true_postivies, \"\\nCurrent best True Negatives: \", true_negatives,\n",
@@ -533,7 +545,7 @@
    "outputs": [],
    "source": [
     "gif_folder_path = model_file_path + \"/\" + \"callback_images\"\n",
-    "image_folders = ['image0', 'image1', 'image2', 'image3']\n",
+    "image_folders = ['image0', 'image1', 'image2', 'image3', 'image4', 'image5', 'image6', 'image7']\n",
     "\n",
     "for i,folder in enumerate(image_folders):\n",
     "    curr_folder = gif_folder_path + \"/\" + folder\n",
