added EarlyStopping and fixed image reconstruction

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -27,10 +27,13 @@
     "import preprocessing\n",
     "import json\n",
     "from os import path, mkdir\n",
+    "import re\n",
+    "from PIL import Image\n",
     "\n",
     "import keras\n",
     "from argparse import ArgumentParser\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from sklearn import metrics"
    ]
   },
   {
@@ -51,7 +54,7 @@
    "outputs": [],
    "source": [
     "# All editable variables\n",
-    "model_file_path = \"models/model_1_UPAE\"\n",
+    "model_file_path = \"models/UPAE/test_4_new_data\"\n",
     "# If preprocessing needs to run\n",
     "load_model = False"
    ]
@@ -94,7 +97,7 @@
    "outputs": [],
    "source": [
     "# each array contains the training, validation, and testing in order\n",
-    "image_datasets = {'train': []}\n",
+    "image_datasets = {'train': [], 'test': []}\n",
     "for dataset_name in image_datasets.keys():\n",
     "    for image_path in glob.glob(f'{dataset_file_path}/{dataset_name}/*.png'):\n",
     "        image = cv2.imread(image_path)\n",
@@ -137,7 +140,7 @@
     "    model.summary()\n",
     "    \n",
     "    if load_model:\n",
-    "        model.load_weights(model_file_path + '/model_weights')\n",
+    "        model.load_weights(model_file_path)\n",
     "    else:\n",
     "        np.random.shuffle(image_datasets['train'])\n",
     "\n",
@@ -153,17 +156,20 @@
     "        save_directory = model_file_path + '/callback_images'\n",
     "        save_callback = SaveImageCallback(validation_data, save_directory=save_directory, vae=model_is_VAE)\n",
     "\n",
+    "        EarlyStopping_callback = tf.keras.callbacks.EarlyStopping(monitor='mse_loss', patience=5,\n",
+    "                                                                  restore_best_weights=True)\n",
+    "\n",
     "        history_train = model.fit(train_data, \n",
     "                                epochs=epochs, \n",
     "                                batch_size=batch_size,\n",
     "                                validation_data=(validation_data, validation_data),\n",
-    "                                callbacks=[save_callback])\n",
+    "                                callbacks=[save_callback, EarlyStopping_callback])\n",
     "        \n",
     "        # Saving the model's history\n",
     "        json.dump(history_train.history, open(model_file_path + '/history.json', 'w'))\n",
     "\n",
     "        #Save weights\n",
-    "        model.save_weights(model_file_path + '/model_weights', save_format='tf')\n",
+    "        model.save_weights(model_file_path, save_format='tf')\n",
     "   \n",
     "    "
    ]
@@ -351,102 +357,6 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "aa833ecb",
-   "metadata": {},
-   "source": [
-    "# Getting of best threshold\n",
-    "TODO: UPDATE WITH CURRENT MADE BY CARA, DATA USED ARE LABELS AND ABNORMALITY SCORE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff3753dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def classify_image(score, threshold):\n",
-    "    if score >= threshold:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0\n",
-    "\n",
-    "def get_threshold_range(abnormality_scores, num_std):\n",
-    "    mean_score = np.mean(abnormality_scores)\n",
-    "    std_score = np.std(abnormality_scores)\n",
-    "\n",
-    "    lower_threshold = mean_score - (num_std * std_score)\n",
-    "    upper_threshold = mean_score + (num_std * std_score)\n",
-    "\n",
-    "    return lower_threshold, upper_threshold\n",
-    "\n",
-    "def calculate_f1_score(predicted_labels, true_labels):\n",
-    "    true_positives = 0\n",
-    "    true_negatives = 0\n",
-    "    false_positives = 0\n",
-    "    false_negatives = 0\n",
-    "\n",
-    "    for predicted, true in zip(predicted_labels, true_labels):\n",
-    "        if predicted == 1 and true == 1:\n",
-    "            true_positives += 1\n",
-    "        elif predicted == 1 and true == 0:\n",
-    "            false_positives += 1\n",
-    "        elif predicted == 0 and true == 1:\n",
-    "            false_negatives += 1\n",
-    "        else:\n",
-    "            true_negatives += 1\n",
-    "\n",
-    "    precision = true_positives / (true_positives + false_positives)\n",
-    "    recall = true_positives / (true_positives + false_negatives)\n",
-    "\n",
-    "    f1_score = 2 * (precision * recall) / (precision + recall)\n",
-    "\n",
-    "    return f1_score, precision, recall, true_positives, true_negatives, false_positives, false_negatives\n",
-    "\n",
-    "def find_optimal_threshold(abnormality_scores, labels):\n",
-    "    best_threshold = None\n",
-    "    best_metric = 0.0\n",
-    "\n",
-    "    # Get a range of threshold values\n",
-    "    lower_threshold, upper_threshold = get_threshold_range(abnormality_scores, num_std=3)\n",
-    "    threshold_range = np.linspace(lower_threshold, upper_threshold, 3000)\n",
-    "    print(lower_threshold, upper_threshold)\n",
-    "    print(len(threshold_range))\n",
-    "    \n",
-    "    # Iterate over a range of threshold values\n",
-    "    for threshold in threshold_range:\n",
-    "        predicted_labels = [classify_image(score, threshold) for score in abnormality_scores]\n",
-    "\n",
-    "        # Evaluate performance metric (e.g., accuracy, precision, recall, F1 score)\n",
-    "        metric, precision, recall, true_postivies, true_negatives, false_positives, false_negatives = calculate_f1_score(predicted_labels, labels)\n",
-    "\n",
-    "        # Update the best threshold if the metric improves\n",
-    "        if metric >= best_metric:\n",
-    "            print(\"Current best Threshold: \", threshold, \"\\nCurrent best F1 Score: \", metric)\n",
-    "            print(\"Current best Precision: \", precision, \"\\nCurrent best Recall: \", recall)\n",
-    "            print(\"\\nCurrent best True Positives: \", true_postivies, \"\\nCurrent best True Negatives: \", true_negatives,\n",
-    "                  \"\\nCurrent best False Positives: \", false_positives, \"\\nCurrent best False Negatives: \", false_negatives)\n",
-    "            print()\n",
-    "            best_metric = metric\n",
-    "            best_threshold = threshold\n",
-    "\n",
-    "\n",
-    "    return best_threshold\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcb40386",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_optimal_threshold(np.float32(reconstructed_images[1]), labels)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "3f5369b0",
    "metadata": {},
    "source": [
@@ -494,7 +404,7 @@
    "outputs": [],
    "source": [
     "for i in range(len(test_images)):\n",
-    "    save_compared_reconstructed_image(test_images[i], np.array(reconstructed_images[0][i]), reconstructed_images[1][i],\n",
+    "    save_compared_reconstructed_image(test_images[i], np.array(history_valid[0][i]), history_valid[1][i],\n",
     "                                      reconstructed_images_path, i, labels[i])\n"
    ]
   },
@@ -553,6 +463,14 @@
     "    print(f\"Creating GIF for: image{i}\")\n",
     "    create_gif(curr_folder, gif_output_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87650927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
