changed loading and training of model to try-catch

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -33,7 +33,7 @@
     "import keras\n",
     "from argparse import ArgumentParser\n",
     "import tensorflow as tf\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n"
    ]
   },
   {
@@ -54,9 +54,7 @@
    "outputs": [],
    "source": [
     "# All editable variables\n",
-    "model_file_path = \"models/UPAE/test_4_new_data\"\n",
-    "# If preprocessing needs to run\n",
-    "load_model = False"
+    "model_file_path = \"models/UPAE/test_4_new_data\""
    ]
   },
   {
@@ -139,9 +137,9 @@
     "    \n",
     "    model.summary()\n",
     "    \n",
-    "    if load_model:\n",
-    "        model.load_weights(model_file_path)\n",
-    "    else:\n",
+    "    try:\n",
+    "        model.load_weights(model_file_path + \"/model_weights\")\n",
+    "    except:\n",
     "        np.random.shuffle(image_datasets['train'])\n",
     "\n",
     "        validation_split = 0.05\n",
@@ -169,7 +167,7 @@
     "        json.dump(history_train.history, open(model_file_path + '/history.json', 'w'))\n",
     "\n",
     "        #Save weights\n",
-    "        model.save_weights(model_file_path, save_format='tf')\n",
+    "        model.save_weights(model_file_path + '/model_weights')\n",
     "   \n",
     "    "
    ]
